Updating styling, tutorials

--- a/resume/index.html
+++ b/resume/index.html
@@ -136,12 +136,12 @@ id: resume
   <h2 class="title">Education</h2>
   <div class="items">
 
-    <h3>Boston College <small class="thin">2010&#8212;2011</small></h3>
+    <h3>Boston College <small class="thin">2011</small></h3>
     <ul>
       <li>Master of Arts, Economics</li>
     </ul>
 
-    <h3>University of Florida <small class="thin">2005&#8212;2009</small></h3>
+    <h3>University of Florida <small class="thin">2009</small></h3>
     <ul>
       <li>Bachelor of Science, Finance</li>
     </ul>
