--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,7 @@ title: Sam Selikoff - About
 
 <div id="about">
   <div class="page-header">
-    <p class='thin subtitle'>I'm a junior developer with experience in front- and back-end web development</p>
+    <p class='thin subtitle'>I'm an intermediate developer with experience in front- and back-end web development</p>
   </div>
   
   <p>The big picture is important to me, and I like being able to contribute to every part of a project. I'm a self-starter with a passion for building beautiful, valuable software. I'm currently focusing on Javascript - specifically data visualization and client-side MVC.</p>
@@ -17,8 +17,8 @@ title: Sam Selikoff - About
     <span class="tag web">SASS/CSS</span>
     <a href="http://compass-style.org/" target="_blank"><span class="tag link web">Compass</span></a>
     <a href="http://d3js.org/" target="_blank"><span class="tag link js">D3</span></a>
-    <a href="http://backbonejs.org/" target="_blank"><span class="tag link js">Backbone</span></a>
     <a href="http://emberjs.com/" target="_blank"><span class="tag link js">Ember</span></a>
+    <a href="http://backbonejs.org/" target="_blank"><span class="tag link js">Backbone</span></a>
     <a href="http://symfony.com/" target="_blank"><span class="tag link server">Symfony</span></a>
     <a href="http://silex.sensiolabs.org/" target="_blank"><span class="tag link server">Silex</span></a>
     <span class="tag server">Perl</span>
@@ -34,7 +34,7 @@ title: Sam Selikoff - About
 
   <hr>
   
-  <p>Besides programming, I enjoy reading, playing guitar, photography, and spending time with friends and family. I currently live in Boston and occasionally get to see my wife Jenna, who's in medical school. We also have a Yorkie named Zoe. She's all attitude.</p>
+  <p>Besides programming, I enjoy reading, playing guitar, photography, and spending time with friends and family. I currently live in Burlington and occasionally get to see my wife Jenna, who's in medical school. We also have a Yorkie named Zoe. She's all attitude.</p>
   <p><img src="/images/about1.jpg" alt=""></p>
   <p><img src="/images/about2.jpg" alt=""></p>
 </div>
