More style updateing

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Sam Selikoff
 ---
 
-<div id="home">
+<div id="home" class='u-inverted'>
 
   <div class="u-container">
     <div class="stories">
