--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: home
 title: Sam Selikoff
 ---
 
-<div id="home" class='u-inverted'>
+<div id="home" class='u-inverted u-subtle-shadow'>
 
   <div class="u-container">
     <div class="stories">
