--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Sam Selikoff
           <p class='story-label'>Upcoming</p>
 
         {% for story in site.data.future_stories %}
-          <section class='story upcoming-story {{story.type}}'>
+          <section class='story upcoming-story {{story.type}} box'>
             {% include future_stories/{{story.type}}.html %}
           </section> 
         {% endfor %}
@@ -25,7 +25,7 @@ title: Sam Selikoff
       <p class='label'>Recent activity</p>
 
       {% for story in site.data.stories limit:5 %}
-        <section class='story {{story.type}}'>
+        <section class='box story {{story.type}}'>
           {% if story.type == 'talk' %}
             <img class='story-image' src='/images/{{story.type}}s/{{story.stub}}.png'>
           {% endif %}
