Organize box scss

--- a/writing/index.html
+++ b/writing/index.html
@@ -7,22 +7,23 @@ title: Sam Selikoff - Writing
   <div class="u-container">
     <div class="title">
       <h1>Writing</h1>
+      <p>Tutorials and articles on JavaScript, economics and more</p>
     </div>
 
     <h2>Tutorials</h2>
 
     <ul class="listing">
       <li class='box box-small box-left'>
-        <h2><a href="/tutorials/d3-backbone-angular-ember/1_original.html">Using D3 with Backbone, Angular and Ember</a></h2>
-        <span class='listing-date'>May 4, 2014</span>
+        <a class='title' href="/tutorials/d3-backbone-angular-ember/1_original.html">Using D3 with Backbone, Angular and Ember</a>
+        <span class='date'>May 4, 2014</span>
       </li>
       <li class='box box-small box-left'>
-        <h2><a href="/tutorials/intro-to-d3-big-data.html">An Introduction to D3, with applications to big data</a></h2>
-        <span class='listing-date'>May 4, 2014</span>
+        <a class='title' href="/tutorials/intro-to-d3-big-data.html">An Introduction to D3, with applications to big data</a>
+        <span class='date'>May 4, 2014</span>
       </li>
       <li class='box box-small box-left'>
-        <h2><a href="/tutorials/starting-out-with-d3-chart.html">Starting out with d3.chart</a></h2>
-        <span class='listing-date'>May 4, 2014</span>
+        <a class='title' href="/tutorials/starting-out-with-d3-chart.html">Starting out with d3.chart</a>
+        <span class='date'>May 4, 2014</span>
       </li>
     </ul>
     
