--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ title: Sam Selikoff
           {% if story.type == 'talk' %}
             <img class='story-image' src='/images/{{story.type}}s/{{story.stub}}.png'>
           {% endif %}
-          <h2 class='title'><a href='{{story.url}}'>{{ story.title }}</a></h2>
+          <a class='title title-link' href='{{story.url}}'>{{ story.title }}</a>
           <h3 class='story-subtitle'>{{ story.subtitle }}</h3>
 
           <p class='info'>
