Shaping up box css, adding talks

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@ title: Sam Selikoff
           {% if story.type == 'talk' %}
             <img class='story-image' src='/images/{{story.type}}s/{{story.stub}}.png'>
           {% endif %}
-          <a class='title title-link' href='{{story.url}}'>{{ story.title }}</a>
+          <a class='box-title box-link' href='{{story.url}}'>{{ story.title }}</a>
           <h3 class='story-subtitle'>{{ story.subtitle }}</h3>
 
           <p class='info'>
             <img class='icon' src='images/icons/{{story.type}}.png'></img>
-            <span class='date'>{{ story.date | date: '%b %d, %Y' }}</span>
+            <span class='box-date'>{{ story.date | date: '%b %d, %Y' }}</span>
           </p>
 
           {% include stories/{{story.type}}.html %}
