Move talks to speaking

--- a/speaking/index.html
+++ b/speaking/index.html
@@ -1,12 +1,12 @@
 ---
 layout: default
-title: Sam Selikoff - Talks
+title: Sam Selikoff - Speaking
 ---
 
-<div id="talks" class="inverted">
+<div id="speaking" class="inverted">
   <div class="u-container">
     <div class="title">
-      <h1>Talks</h1>
+      <h1>Speaking</h1>
     </div>
 
     {% for talk in site.talks %}
