--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@ title: Sam Selikoff
           {% if story.type == 'talk' %}
             <img class='story-image' src='/images/{{story.type}}s/{{story.stub}}.png'>
           {% endif %}
-          <a class='box-title box-link' href='{{story.url}}'>{{ story.title }}</a>
-          <h3 class='story-subtitle'>{{ story.subtitle }}</h3>
+          <a class='box-title' href='{{story.url}}'>{{ story.title }}</a>
+          <h3 class='box-subtitle'>{{ story.subtitle }}</h3>
 
           <p class='info'>
             <img class='icon' src='images/icons/{{story.type}}.png'></img>
