--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@ title: Sam Selikoff
                 <small class='u-subtle'>—{{ post.date | date: '%B %-d, %Y' }}</small>
               </li>
             {% endfor %}
+              <li>
+                <a href="/blog"><small>See all...</small></a>
+              </li>
           </ul>
         </div>
       </div> 
