--- a/writing/index.html
+++ b/writing/index.html
@@ -14,21 +14,27 @@ title: Sam Selikoff - Writing
   <h2>Tutorials</h2>
   {% for article in site.data.writing.tutorials %}
     <div class='box box-small box-left'>
-      <a class='box-title' href="{{article.url}}">{{article.title}}</a>
+      <div class="box-body">
+        <a class='box-title' href="{{article.url}}">{{article.title}}</a>
+      </div>
     </div>
   {% endfor %}
 
   <h2>Book notes</h2>
   {% for article in site.data.writing.book_reviews %}
     <div class='box box-small box-left'>
-      <a class='box-title' href="{{article.url}}">{{article.title}}</a>
+      <div class="box-body">
+        <a class='box-title' href="{{article.url}}">{{article.title}}</a>
+      </div>
     </div>
   {% endfor %}
 
   <h2>Economics</h2>
   {% for article in site.data.writing.economics %}
     <div class='box box-small box-left'>
-      <a class='box-title' href="{{article.url}}">{{article.title}}</a>
+      <div class="box-body">
+        <a class='box-title' href="{{article.url}}">{{article.title}}</a>
+      </div>
     </div>
   {% endfor %}
 
