Add dates to articles

--- a/index.html
+++ b/index.html
@@ -55,6 +55,30 @@ title: Sam Selikoff
         </div>
       </div> 
 
+      <div class="title title-inverted">
+        <h1><a class='link-inverted' href="/writing">Writing</a></h1>
+        <p class='title-label'>Tutorials and articles</p>
+      </div>
+      <div class='box box-small u-margin-bottom'>
+        <div class='box-header'>
+          <p class='box-header-title'><span class="u-subtle-on-red">Latest articles</span></p>
+        </div>
+        <div class='box-body'>
+          <ul class='box-listing'>
+            {% assign sorted_writings = (site.writing | sort: 'date' | reverse) %}
+            {% for article in sorted_writings limit:3 %}
+              <li>
+                <a href="{{ article.url }}">{{ article.title }}</a>
+                <small class='u-subtle'>—{{ article.date | date: '%B %-d, %Y' }}</small>
+              </li>
+            {% endfor %}
+              <li>
+                <a href="/writing"><small>See all...</small></a>
+              </li>
+          </ul>
+        </div>
+      </div> 
+
       <!-- {% for post in site.posts limit:5 %}
         <section class='box story'>
           <a class='box-title' href='{{post.url}}'>{{ post.title }}</a>
