--- a/index.html
+++ b/index.html
@@ -69,11 +69,33 @@ title: Sam Selikoff
             {% for article in sorted_writings limit:3 %}
               <li>
                 <a href="{{ article.url }}">{{ article.title }}</a>
-                <small class='u-subtle'>—{{ article.date | date: '%B %-d, %Y' }}</small>
               </li>
             {% endfor %}
               <li>
                 <a href="/writing"><small>See all...</small></a>
+              </li>
+          </ul>
+        </div>
+      </div> 
+
+      <div class="title title-inverted">
+        <h1><a class='link-inverted' href="/work">Code + Design</a></h1>
+        <p class='title-label'>My work, past and present</p>
+      </div>
+      <div class='box box-small u-margin-bottom'>
+        <div class='box-header'>
+          <p class='box-header-title'><span class="u-subtle-on-red">Latest projects</span></p>
+        </div>
+        <div class='box-body'>
+          <ul class='box-listing'>
+            {% assign sorted_projects = (site.projects | sort: 'date' | reverse) %}
+            {% for project in sorted_projects limit:3 %}
+              <li>
+                <a href="{{ project.project_url }}">{{ project.title }}</a>
+              </li>
+            {% endfor %}
+              <li>
+                <a href="/work"><small>See all...</small></a>
               </li>
           </ul>
         </div>
