working on about

--- a/about/index.html
+++ b/about/index.html
@@ -1,11 +1,13 @@
 ---
-layout: article
+layout: default
 title: Sam Selikoff - About
 ---
 
 <div id="about">
+
   <div class="page-header">
-    <p class='thin subtitle'>I'm an intermediate developer with experience in front- and back-end web development</p>
+    <h1>Sam Selikoff</h1>
+    <p class='page-header-subtitle'>I'm an intermediate developer with experience in front- and back-end web development</p>
   </div>
   
   <p>The big picture is important to me, and I like being able to contribute to every part of a project. I'm a self-starter with a passion for building beautiful, valuable software. I'm currently focusing on Javascript - specifically data visualization and client-side MVC.</p>
